to fix build with 11.0.7+10-post-Ubuntu-2ubuntu218.04...
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>